# lark_wallet

./: .gitignore  GEMINI.md  README.md  backfill_counterparty.py  feishu-asset-sync.service  import.py  learn_corrections.py  main.py  pyproject.toml  rules_jasxu.csv  setup_tables.py  start.sh  status.sh  stop.sh  test_email.py  test_feishu.py  test_smart_categorizer.py
lib/: bill_parser.py  config.py  corrections.json  feishu_client.py  logger.py  mcp_client.py  smart_categorizer.py
scripts/: apply_validation.py  extract_rules.py  feishu_review.py  fill_by_rules.py  validate_rules.py
src/core/: __init__.py  config.py  database.py  deepseek_client.py  feishu_client.py  health_client.py  logger.py
src/datasources/: __init__.py  base.py  binance_client.py  simple_binance_client.py  xueqiu_client.py
src/schedulers/: __init__.py  asset_distribution_sync.py  crypto_sync.py  daily_report.py  feishu_backup.py  feishu_change_review.py  fund_sync.py  health_advisor.py  holding_period_reminder.py  milestone_alert.py  monthly_report.py  periodic_report.py  price_alert.py  snapshot.py  sync_error_summary.py  weight_reminder.py
src/utils/: __init__.py  ai_advisor.py  alert.py  asset_discovery.py  backup.py  email_sender.py  expense_classifier.py  expense_rules.py  feishu_backup.py  feishu_guard.py  health_prompt.py
