[project]
name = "feishu-asset-sync"
version = "1.0.0"
description = "飞书账单导入 + 资产追踪与自动同步系统"
requires-python = ">=3.10"
dependencies = [
    # HTTP 请求
    "requests>=2.31.0",

    # 定时任务
    "apscheduler>=3.10.4",

    # 数据源
    "ccxt>=4.1.50",           # 币安等交易所API
    "pysnowball>=0.1.8",      # 雪球API

    # 日志
    "loguru>=0.7.2",

    # 工具
    "python-dotenv>=1.0.0",
    "tqdm>=4.66.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/core", "src/datasources", "src/schedulers", "src/utils"]

[dependency-groups]
dev = []
